# text-diff-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  test.yml
src/: filereader.rs  main.rs  style.rs  vector_comparer.rs  vector_exporter.rs  view.rs
