[package]
name = "text-diff"
version = "0.1.0"
edition = "2021"
authors = ["CodeDead <admin@codedead.com>"]
readme = "README.md"
repository = "https://github.com/CodeDead/text-diff-rs"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced" }
native-dialog = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
codegen-units = 1
