[package]
name = "text-diff"
version = "0.1.0"
edition = "2021"
authors = ["CodeDead <admin@codedead.com>"]
description = "A cross-platform GUI for comparing two text files"
readme = "README.md"
repository = "https://github.com/CodeDead/text-diff-rs"
license = "GPL-3.0"
license-file = "LICENSE"
keywords = ["gui", "ui", "text-diff", "interface", "codedead", "diff", "difference"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced" }
native-dialog = { git = "https://github.com/CodeDead/native-dialog-rs" }
serde = { version = "1.0" }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
codegen-units = 1
